--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 
 <body>
     <!-- header start -->
     <!-- header end -->
-CONTENT
+<button type="info"> Discover now</button>
     <!-- hero start -->
     <!-- hero end -->
 
