button update class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- header start -->
     <!-- header end -->
-<button type="info"> Discover now</button>
+<button class="btn" type="info"> Discover now</button>
     <!-- hero start -->
     <!-- hero end -->
 
