--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
    <!-- feedback start -->
  <section class="container feedback">
     <div class="row">
-      <h2 class="feedback-title col-6">Client’s Feedback About Me</h2>
-      <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
+      <h2 class="feedback-title">Client’s Feedback About Me</h2>
+      <p class="feedback-content">It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
 
     </div>
  </section>
