--- a/index.html
+++ b/index.html
@@ -17,7 +17,47 @@
   <body>
 
    <!-- header start -->
-
+<header class="container header">
+      <div class="row">
+        <div class="col-12 flex-container">
+        <a class="header-logo-link" href="#"
+          ><img class="header-logo-img" src="./img/header/Logo.png" alt="Logo of Personal brand"
+        /></a>
+        <nav class="header-navigation hidden visible-lg">
+          <ul class="header-list">
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Home</a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">About</a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Services</a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Portfolio</a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Pricing</a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Blog <span class="fa fa-chevron-down chevron-down"></span></a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Pages <span class="fa fa-chevron-down chevron-down"></span></a>
+            </li>
+            <li class="list-item flex-align-center">
+              <a class="navigation-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      <div class="navigation-hamburger visible hidden-lg">
+        <div class="hamburger-bar"></div>
+        <div class="hamburger-bar"></div>
+        <div class="hamburger-bar"></div>
+      </div>
+      </div>
+    </header>
    <!-- header end -->
     
     
