--- a/index.html
+++ b/index.html
@@ -41,46 +41,46 @@
       <p class="services-description col-12 col-sm-12 col-md-10 col-lg-8 ml-md-1 ml-lg-2">At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
     </div>
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-pie-chart service-icon""></div>
-        <h3>
-          <a href="#">Web design</a>
-        </h3>
+        <a href="#">
+          <h3>Web design</h3>
+        </a>
         <p class="service-p">“It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-desktop service-icon"></div>
-        <h3>
-          <a href="#">Web development</a>
-        </h3>
+        <a href="#">
+          <h3>Web development</h3>
+        </a>
         <p class="service-p">If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-camera service-icon"></div>
-        <h3>
-          <a href="#">Photography</a>
-        <h3>
+        <a href="#">
+          <h3>Photography</h3>
+        </a>
         <p class="service-p">Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-picture-o service-icon"></div>
-        <h3>
-          <a href="#">Clipping path</a>
-        </h3>
+        <a href="#">
+          <h3>Clipping path</h3>
+        </a>
         <p class="service-p">Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a lot of argument.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-tablet service-icon"></div>
-        <h3>
-          <a href="#">Apps interface</a>
-        </h3>
+        <a href="#">
+          <h3>Apps interface</h3>
+        </a>
         <p class="service-p">Do you sometimes have the feeling that you’re running into the same obstacles over and over again? Many of my conflicts.</p>
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-4 single-service">
+      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-rocket service-icon"></div>
-        <h3>
-          <a href="#">Graphic design</a>
-        </h3>
+        <a href="#">
+          <h3>Graphic design</h3>
+        </a>
         <p class="service-p">You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however, ‘believing’ is not just thinking that.</p>
       </div>
     </div>
