--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
     
     
    <!-- hero start -->
-<section class="container col-12">
+<section class="container">
   <div class="row"> 
-    <div class="container col-6">
+    <div class="container col-12 col-lg-6 col-md-5">
       <h4 class="title">This is me</h4>
       <h1 class="name">Philip Gilbert</h1>
       <p class="description">You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
       <a href="#" class="btn col-1">Discover now</a>
     </div>
-    <div class="col-6">
-      <img src="./img/hero-img.png" alt="Gilbert">
-    </div>
+    <img src="./img/hero/hero-img.png" class="col-12 col-lg-6 col-md-5" alt="Gilbert">
   </div>
 </section>
    <!-- hero end -->
