--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
     <div class="row">
       <h2 class="feedback-title">Client’s Feedback About Me</h2>
       <p class="feedback-content">It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
-
+      <div>
+        <div class="card1">
+          <img class="" src="./img/feedback_img/Lady1.png" alt="Lady1">
+          <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
+          <h4>Harriet Maxwell</h4>
+          <p>CEO at Google</p>
+        </div>
+      </div>
+      <div class="card2">
+        <img class="" src="./img/feedback_img/Lady2.png" alt="Lady2">
+        <p class="">A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.</p>
+        <h4 class="">Carolyn Craig</h4>
+        <p>CEO at Facebook</p>
+      </div>
+    </div>
     </div>
  </section>
    <!-- feedback end -->
