--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
    <!-- stats start -->
 <section class="container stats"> 
     <div class="row">
-      <div class="col-12 col-sm-5 col-md-3 col-lg-3">
+      <div class="col-12 col-md-5 col-lg-3">
         <h2 class="number">2536</h2>
         <p class="counter-text">Projects completed</p>
       </div>
-      <div class="col-12 col-sm-5 col-md-3 col-lg-3">
+      <div class="col-12 col-md-5 col-lg-3">
         <h2 class="number">6784</h2>
         <p class="counter-text">Happy clients</p>
       </div>
-      <div class="col-12 col-sm-5 col-md-3 col-lg-3">
+      <div class="col-12 col-md-5 col-lg-3">
         <h2 class="number">2239</h2>
         <p class="counter-text">Cups of coffee</p>
       </div>
-      <div class="col-12 col-sm-5 col-md-3 col-lg-3">
+      <div class="col-12 col-md-5 col-lg-3">
         <h2 class="number">434</h2>
         <p class="counter-text">Real professionals</p>
       </div>
