Hero for correction

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     
     
    <!-- hero start -->
-<section class="container">
+<section class="this-me container">
   <div class="row"> 
-    <div class="container col-12 col-lg-6 col-md-5">
+    <div class="block-left container col-12 col-lg-5 col-md-6 ml-lg-1">
       <h4 class="title">This is me</h4>
       <h1 class="name">Philip Gilbert</h1>
       <p class="description">You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
       <a href="#" class="btn col-1">Discover now</a>
     </div>
-    <img src="./img/hero/hero-img.png" class="col-12 col-lg-6 col-md-5" alt="Gilbert">
+    <img src="./img/hero/hero-img.png" class="block-right col-8 col-lg-5 col-md-6 ml-2" alt="Gilbert">
   </div>
 </section>
    <!-- hero end -->
