--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="description">You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
       <a href="#" class="btn col-1">Discover now</a>
     </div>
-    <img src="./img/hero/hero-img.png" class="col-8 ml-2 col-md-6 ml-md-0 col-lg-5" alt="Gilbert">
+    <img src="./img/hero/hero-img.png" class="block col-md-6 ml-md-0 col-lg-5" alt="Gilbert">
   </div>
 </section>
    <!-- hero end -->
