--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
     </div>
     <div class="row">
       <div class="blog-post col-12 col-sm-12 col-md-4">
-        <img class="blog-img" src="./img/xb1.jpg.pagespeed.ic.kt2tbOEfuO.webp" alt="City">
+        <div class="img-box">
+          <img class="blog-img" src="./img/xb1.jpg.pagespeed.ic.kt2tbOEfuO.webp" alt="City">
+        </div>
         <div class="about-blog">
           <div class="about-blog-author">
             <img class="blog-author-img" src="./img/xuser.png.pagespeed.ic.3Cyb7EkxkK.webp" alt="Author">
-            <span class="blog-author-name">Mark Wiens</span>
+            <a href="#">
+              <span class="blog-author-name">Mark Wiens</span>
+            </a>
           </div>
           <div class="blog-info">
             <span class="blog-post-date">13th Dec</span>
@@ -197,16 +201,21 @@
               04</span>
           </div>
         </div>
-        <h3 class="blog-post-tittle">BREAK THROUGH SELF DOUBT AND FEAR  
-        </h3>
+        <a href="#">
+          <h3 class="blog-post-tittle">BREAK THROUGH SELF DOUBT AND FEAR </h3>
+        </a>
         <p class="blog-post-description">Dream interpretation has many forms; it can be done be done for the sake of fun, hobby or can be taken up as a serious career.</p>
       </div>
       <div class="blog-post col-12 col-sm-12 col-md-4">
-        <img class="blog-img" src="./img/xb2.jpg.pagespeed.ic.1fF1ZaIF9t.webp" alt="Woods">
+        <div class="img-box">
+          <img class="blog-img" src="./img/xb2.jpg.pagespeed.ic.1fF1ZaIF9t.webp" alt="Woods">
+        </div>
         <div class="about-blog">
           <div class="about-blog-author">
             <img class="blog-author-img" src="./img/xuser.png.pagespeed.ic.3Cyb7EkxkK.webp" alt="Author">
-            <span class="blog-author-name">Mark Wiens</span>
+            <a href="#">
+              <span class="blog-author-name">Mark Wiens</span>
+            </a>
           </div>
           <div class="blog-info">
             <span class="blog-post-date">13th Dec</span>
@@ -218,16 +227,21 @@
               04</span>
           </div>
         </div>
-        <h3 class="blog-post-tittle">PORTABLE FASHION FOR YOUNG WOMEN 
-        </h3>
+        <a href="#">
+          <h3 class="blog-post-tittle">PORTABLE FASHION FOR YOUNG WOMEN </h3>
+        </a>
         <p class="blog-post-description">You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the chances of improving.</p>
       </div>
       <div class="blog-post col-12 col-sm-12 col-md-4">
-        <img class="blog-img" src="./img/xb3.jpg.pagespeed.ic.cnBcpWJLtb.webp" alt="City">
+        <div class="img-box">
+          <img class="blog-img" src="./img/xb3.jpg.pagespeed.ic.cnBcpWJLtb.webp" alt="City">
+        </div>
         <div class="about-blog">
           <div class="about-blog-author">
             <img class="blog-author-img" src="./img/xuser.png.pagespeed.ic.3Cyb7EkxkK.webp" alt="Author">
-            <span class="blog-author-name">Mark Wiens</span>
+            <a href="#">
+              <span class="blog-author-name">Mark Wiens</span>
+            </a>
           </div>
           <div class="blog-info">
             <span class="blog-post-date">13th Dec</span>
@@ -239,8 +253,9 @@
               04</span>
           </div>
         </div>
-        <h3 class="blog-post-tittle">DO DREAMS SERVE AS A PREMONITION 
-        </h3>
+        <a href="#">
+          <h3 class="blog-post-tittle">DO DREAMS SERVE AS A PREMONITION </h3>
+        </a>
         <p class="blog-post-description">So many of us are demotivated to achieve anything. Such people are not enthusiastic about anything. They don’t want to work involved.</p>
       </div>
     </div>
