Feedback commit for review

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       <h2 class="feedback-title">Client’s Feedback About Me</h2>
       <p class="feedback-content">It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
     </div>
-    <div class="row">
-        <div class="card col-12 col-md-6 col-lg-6">
-          <div class="row feedback-top">
+    <div class="row cards">
+        <div class="card card-1 col-12 col-md-6 col-lg-6">
+          <div class="feedback-top">
             <img class="lady" src="./img/feedback_img/Lady1.png" alt="Lady1">
             <p class="col-10">Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.</p>
           </div>  
@@ -68,6 +68,10 @@
           </div>
           <h4 class="position">Carolyn Craig</h4>
           <p class="name">CEO at Facebook</p>
+        </div>
+        <div class="arrow">
+          <div class="fa fa-long-arrow-up arrow-up"></div>
+          <div class="fa fa-long-arrow-down arrow-down"></div>
         </div>
     </div>
  </section>
