--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/pages/home.css" />
+  
   </head>
 
   <body>
@@ -27,6 +28,18 @@
 
 
    <!-- about start -->
+   <section class="container">
+    <div class="row about">
+      <img src="./img/aboutme/xabout-img.png.png" alt="Person" 
+      class="col-12 col-lg-6 col-md-5 ml-md-1 col-ml-lg-2 about-img">
+      <div class="col-12 col-lg-5 col-md-5 ml-md-1 col-ml-lg-1 about-inn">
+        <h4 class="about-title">About me</h4>
+        <h2 class="about-details">PERSONAL DETAILS</h2>
+        <p>Here, I focus on a range of items and features that we use in life without giving them a second thought.such as Coca Cola. Dolor sit amet,consectetur adipisicing elit, sed do eiusmod tempor inicididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco. </p>
+        <a href="#" class="btn about-btn">VIEW FULL DETAILS</a>
+      </div>
+    </div>
+   </section>
     
    <!-- about end -->
     
