--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
   <div class="row gallery">
   
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p1.jpg" alt="1"><h3>2D Vinyl Design</h3><p>vector</p></div>
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p2.jpg" alt="2"><h3>2D Vinyl Design</h3><p>vector</p></div>
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p3.jpg" alt="3"><h3>Creative Poster Design</h3><p>Agency</p></div>
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p4.jpg" alt="4"><h3>Embosed Logo Design</h3><p>Portal</p></div>
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p5.jpg" alt="5"><h3>3D Helmet Design</h3><p>vector</p></div>
-      <div class="col-12 col-sm-4 imgbox"><img src="./img/projects/p6.jpg" alt="6"><h3>2D Vinyl Design</h3><p>raster</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p1.jpg" alt="1"></div><h3>2D Vinyl Design</h3><p>vector</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p2.jpg" alt="2"></div><h3>2D Vinyl Design</h3><p>vector</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p3.jpg" alt="3"></div><h3>Creative Poster Design</h3><p>Agency</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p4.jpg" alt="4"></div><h3>Embosed Logo Design</h3><p>Portal</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p5.jpg" alt="5"></div><h3>3D Helmet Design</h3><p>vector</p></div>
+      <div class="col-12 col-sm-4 imgbox"><div class="imgwrap"><i class="fa fa-binoculars" aria-hidden="true"></i><img src="./img/projects/p6.jpg" alt="6"></div><h3>2D Vinyl Design</h3><p>raster</p></div>
 
 </div>
     </section>
