--- a/index.html
+++ b/index.html
@@ -340,13 +340,22 @@
       <div class="footer-newsletter col-12 col-sm-6 col-lg-5">
         <h3 class="footer-h3">Newsletter</h3>
         <p>Stay updates with our latest trends</p>
-        <div class="form-group">
-          <input type="text" placeholder="Enter Email Address" id="Email">
-          <button class="submit"><span class="fa fa-long-arrow-right"></span></button>
+        <form class="footer-form-group">
+          <div class="footer-form-input">
+            <input type="text" placeholder="Enter Email Address" id="Email">
+            <button class="submit"><span class="fa fa-long-arrow-right"></span></button>
+          </div>
+        </form>
       </div>
-      </div>
-      <div class="footer-follow col-12 col-sm-6 col-lg-2">
+      <div class="footer-follow col-12 col-sm-12 col-lg-2">
         <h3 class="footer-h3">Follow me</h3>
+        <p>Let us be social</p>
+        <div class="social-links">
+          <a href="#" class="fa fa-facebook-f"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-dribbble"></a>
+          <a href="#" class="fa fa-behance"></a>
+        </div>
       </div>
     </div>
    </section>
