--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     
    <!-- stats start -->
 <section class="container stats"> 
-    <div class="row">
-      <div class="stats-content col-12 col-md-6 col-lg-3">
+    <div id="stats_block" class="row">
+      <!--<div class="stats-content col-12 col-md-6 col-lg-3">
         <h2 class="number">2536</h2>
         <p class="counter-text">Projects completed</p>
       </div>
@@ -149,7 +149,7 @@
       <div class="stats-content col-12 col-md-6 col-lg-3">
         <h2 class="number">434</h2>
         <p class="counter-text">Real professionals</p>
-      </div>
+      </div>-->
     </div>
 </section>
    <!-- stats end -->
