Plans fix, mobile nav JS

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
         /></a>
         <nav class="header-navigation hidden visible-lg">
           <ul class="header-list">
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Home</a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">About</a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Services</a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Portfolio</a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Pricing</a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Blog <span class="fa fa-chevron-down chevron-down"></span></a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class="flex-align-center">
               <a class="navigation-link" href="#">Pages <span class="fa fa-chevron-down chevron-down"></span></a>
             </li>
-            <li class="list-item flex-align-center">
+            <li class=" flex-align-center">
               <a class="navigation-link" href="#">Contact</a>
             </li>
           </ul>
@@ -55,6 +55,10 @@
         <div class="hamburger-bar"></div>
         <div class="hamburger-bar"></div>
         <div class="hamburger-bar"></div>
+      </div>
+      <div class="close-icon hidden">
+        <div class="close">
+        </div>
       </div>
       </div>
     </header>
@@ -172,7 +176,7 @@
         When someone does something that they know that they shouldn’t do, did
         they.
       </p>
-      <div class="row pricing-container">
+      <div class="row">
         <div class="col-lg-3 pricing-box">
           <div class="plan-number">01</div>
           <h3 class="plan-name">Economy</h3>
@@ -330,8 +334,21 @@
    <!-- footer start -->
     
    <!-- footer end -->
-
-
+<div class="mobile-nav-overlay hidden"></div>
+<nav class="mobile-nav hidden">
+  <ul class="mobile-nav-list">
+<li>
+  <a class="mobile-nav-link" href="#">Home</a>
+</li>
+<li>
+  <a class="mobile-nav-link" href="#">About</a>
+</li>
+<li>
+  <a class="mobile-nav-link" href="#">Blog <span class="fa fa-chevron-down chevron-down"></span></a>
+</li>
+  </ul>
+</nav>
    <script src="./js/pages/home.js" type="module" defer></script>
+      <script src="./js/components/header.js" type="module" defer></script>
   </body>
 </html>
