fixed form font weight

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
    <!-- footer start -->
 
    <section class="container footer">
-    <div class="row footer-row">
+    <div class="row">
       <div class="footer-about-me col-12 col-sm-6 col-lg-5">
         <h3 class="footer-h3">About me</h3>
         <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.
@@ -341,7 +341,7 @@
         <h3 class="footer-h3">Newsletter</h3>
         <p>Stay updates with our latest trends</p>
         <form class="footer-form-group">
-          <div class="footer-form-input">
+          <div class="footer-form">
             <input type="text" placeholder="Enter Email Address" id="Email">
             <button class="submit"><span class="fa fa-long-arrow-right"></span></button>
           </div>
