--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <div class="row">
       <p class="services-description col-12 col-sm-12 col-md-10 col-lg-8 ml-md-1 ml-lg-2">At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
     </div>
-    <div class="row">
-      <div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
+    <div id="services_block" class="row" >
+      <!--<div class="single-service col-12 col-sm-12 col-md-6 col-lg-4">
         <div class="fa fa-pie-chart service-icon""></div>
         <a href="#">
           <h3>Web design</h3>
@@ -122,7 +122,7 @@
           <h3>Graphic design</h3>
         </a>
         <p class="service-p">You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however, ‘believing’ is not just thinking that.</p>
-      </div>
+      </div> -->
     </div>
 
 
