Header data, navigation bar, mobile-nav

--- a/index.html
+++ b/index.html
@@ -25,30 +25,8 @@
         /></a>
         <nav class="header-navigation hidden visible-lg">
           <ul class="header-list">
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Home</a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">About</a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Services</a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Portfolio</a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Pricing</a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Blog <span class="fa fa-chevron-down chevron-down"></span></a>
-            </li>
-            <li class="flex-align-center">
-              <a class="navigation-link" href="#">Pages <span class="fa fa-chevron-down chevron-down"></span></a>
-            </li>
-            <li class=" flex-align-center">
-              <a class="navigation-link" href="#">Contact</a>
-            </li>
+            <!-- <li class="flex-align-center">
+              <a class="navigation-link" href="#">Home</a> -->
           </ul>
         </nav>
       <div class="navigation-hamburger visible hidden-lg">
@@ -335,17 +313,11 @@
     
    <!-- footer end -->
 <div class="mobile-nav-overlay hidden"></div>
-<nav class="mobile-nav hidden">
+<nav class="mobile-nav">
   <ul class="mobile-nav-list">
-<li>
+<!-- <li>
   <a class="mobile-nav-link" href="#">Home</a>
-</li>
-<li>
-  <a class="mobile-nav-link" href="#">About</a>
-</li>
-<li>
-  <a class="mobile-nav-link" href="#">Blog <span class="fa fa-chevron-down chevron-down"></span></a>
-</li>
+</li> -->
   </ul>
 </nav>
    <script src="./js/pages/home.js" type="module" defer></script>
