--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     <div class="row">
       <p class="blogs-description col-12 col-sm-12 col-md-10 col-lg-8 ml-md-1 ml-lg-2">You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the chances of improving and expanding the business</p>
     </div>
-    <div class="row">
-      <div class="blog-post col-12 col-sm-12 col-md-4">
+    <div id="blogs_block" class="row">
+      <!-- <div class="blog-post col-12 col-sm-12 col-md-4">
         <div class="img-box">
           <img class="blog-img" src="./img/xb1.jpg.pagespeed.ic.kt2tbOEfuO.webp" alt="City">
         </div>
@@ -363,7 +363,7 @@
           <h3 class="blog-post-tittle">DO DREAMS SERVE AS A PREMONITION </h3>
         </a>
         <p class="blog-post-description">So many of us are demotivated to achieve anything. Such people are not enthusiastic about anything. They don’t want to work involved.</p>
-      </div>
+      </div> -->
     </div>
 
 
