--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
       <p class="feedback-content">It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
     </div>
     <div class="row cards">
+      <div class="slides">
         <div class="card card-1 col-12 col-md-6 col-lg-6">
           <div class="feedback-top">
             <img class="lady" src="./img/feedback_img/Lady1.png" alt="Lady1">
@@ -206,10 +207,11 @@
           <h3 class="position">Carolyn Craig</h4>
           <p class="name">CEO at Facebook</p>
         </div>
-        <div class="arrow">
-          <div class="fa fa-long-arrow-up arrow-up"></div>
-          <div class="fa fa-long-arrow-down arrow-down"></div>
-        </div>
+      </div>
+      <div class="arrow">
+        <div id="carousel_next" class="fa fa-long-arrow-up arrow-up"></div>
+        <div id="carousel_prev" class="fa fa-long-arrow-down arrow-down"></div>
+      </div>
     </div>
  </section>
    <!-- feedback end -->
@@ -420,6 +422,6 @@
   </ul>
 </nav>
    <script src="./js/pages/home.js" type="module" defer></script>
-      <script src="./js/components/header.js" type="module" defer></script>
+      <script src="./js/components/feedback_carousel.js" type="module" defer></script>
   </body>
 </html>
