Plans data JS, section spacing fixes

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         When someone does something that they know that they shouldn’t do, did
         they.
       </p>
-      <div class="row">
-        <div class="col-lg-3 pricing-box">
+      <div id="plans-row" class="row">
+        <!-- <div class="col-lg-3 pricing-box">
           <div class="plan-number">01</div>
           <h3 class="plan-name">Economy</h3>
           <p class="plan-target-client">For the individuals</p>
@@ -223,43 +223,7 @@
           </div>
           <h2 class="price">&#163;199.00</h2>
           <a href="#" class="btn cta-plan">Buy now</a>
-        </div>
-        <div class="col-lg-3 pricing-box">
-          <div class="plan-number">02</div>
-          <h3 class="plan-name">Business</h3>
-          <p class="plan-target-client">For the individuals</p>
-          <div class="benefits-box">
-            <p class="benefit">Secure Online Transfer</p>
-            <p class="benefit">Unlimited Styles for interface</p>
-            <p class="benefit">Reliable Customer Service</p>
-          </div>
-          <h2 class="price">&#163;299.00</h2>
-          <a href="#" class="btn cta-plan">Buy now</a>
-        </div>
-        <div class="col-lg-3 pricing-box">
-          <div class="plan-number">03</div>
-          <h3 class="plan-name">Premium</h3>
-          <p class="plan-target-client">For the individuals</p>
-          <div class="benefits-box">
-            <p class="benefit">Secure Online Transfer</p>
-            <p class="benefit">Unlimited Styles for interface</p>
-            <p class="benefit">Reliable Customer Service</p>
-          </div>
-          <h2 class="price">&#163;399.00</h2>
-          <a href="#" class="btn cta-plan">Buy now</a>
-        </div>
-        <div class="col-lg-3 pricing-box">
-          <div class="plan-number">04</div>
-          <h3 class="plan-name">Exclusive</h3>
-          <p class="plan-target-client">For the individuals</p>
-          <div class="benefits-box">
-            <p class="benefit">Secure Online Transfer</p>
-            <p class="benefit">Unlimited Styles for interface</p>
-            <p class="benefit">Reliable Customer Service</p>
-          </div>
-          <h2 class="price">&#163;499.00</h2>
-          <a href="#" class="btn cta-plan">Buy now</a>
-        </div>
+        </div> -->
       </div>
     </section>
    <!-- plan end -->
