--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
    <section class="brands">
       <div class="brands main">
         <div class="brandswrap">
-          <a class="col-12 col-sm-4" href="#"><img src="./img/brands/brands1.webp" alt="brand 1"></a>
-          <a class="col-12 col-sm-4" href="#"><img src="./img/brands/brands2.webp" alt="brand 2"></a>
-          <a class="col-12 col-sm-4" href="#"><img src="./img/brands/brands3.webp" alt="brand 3"></a>
-          <a class="col-12 col-sm-4" href="#"><img src="./img/brands/brands4.webp" alt="brand 4"></a>
-          <a class="col-12 col-sm-4" href="#"><img src="./img/brands/brands5.webp" alt="brand 5"></a>
+          <a class="ione col-12 col-sm-4" href="#"><img src="./img/brands/brands1.webp" alt="brand 1"></a>
+          <a class="itwo col-12 col-sm-4" href="#"><img src="./img/brands/brands2.webp" alt="brand 2"></a>
+          <a class="ithree col-12 col-sm-4" href="#"><img src="./img/brands/brands3.webp" alt="brand 3"></a>
+          <a class="ifour col-12 col-sm-4" href="#"><img src="./img/brands/brands4.webp" alt="brand 4"></a>
+          <a class="ifive col-12 col-sm-4" href="#"><img src="./img/brands/brands5.webp" alt="brand 5"></a>
         </div>
       </div>
    </section>
